# fathena

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: analysis_codeql.yml  build_servers_cmake_clang.yml  build_servers_cmake_gcc.yml  build_servers_cmake_osx.yml  build_servers_cmake_windows.yml  build_servers_modes.yml  build_servers_packetversions.yml  build_servers_vip.yml  format_check.yml  npc_db_validation.yml
sql-files/: README.md  logs.sql  main.sql  web.sql
src/char/: char.cpp  char.hpp  char_clif.cpp  char_clif.hpp  char_logif.cpp  char_mapif.cpp  int_achievement.cpp  int_auction.cpp  int_elemental.cpp  int_guild.cpp  int_guild.hpp  int_homun.cpp  int_mail.cpp  int_mercenary.cpp  int_party.cpp  int_pet.cpp  int_quest.cpp  int_storage.cpp  inter.cpp
src/common/: CMakeLists.txt  cbasetypes.hpp  core.cpp  core.hpp  db.cpp  db.hpp  ers.cpp  ers.hpp  malloc.cpp  mapindex.cpp  mapindex.hpp  md5calc.cpp  mmo.hpp  random.hpp  showmsg.cpp  socket.cpp  socket.hpp  sql.cpp  sql.hpp  strlib.cpp  strlib.hpp  timer.cpp  timer.hpp  utilities.cpp  utilities.hpp  utils.cpp  winapi.hpp
src/config/: const.hpp  core.hpp
src/login/: CMakeLists.txt  LoginServerMain.cpp  account.cpp  account.hpp  login.cpp  login.hpp  loginchrif.cpp  loginchrif.hpp  loginclif.cpp
src/login/accountdb/: AccountDb.hpp  AccountDbSql.cpp  AccountDbSql.hpp  CMakeLists.txt  MmoAccount.hpp
src/map/: CMakeLists.txt  achievement.cpp  achievement.hpp  atcommand.cpp  battle.cpp  battle.hpp  battleground.cpp  battleground.hpp  buyingstore.cpp  buyingstore.hpp  cashshop.cpp  channel.cpp  channel.hpp  chat.cpp  chat.hpp  chrif.cpp  clan.cpp  clif.cpp  clif.hpp  clif_packetdb.hpp  duel.cpp  elemental.cpp  elemental.hpp  guild.cpp  guild.hpp  homunculus.cpp  homunculus.hpp  instance.cpp  instance.hpp  intif.cpp  intif.hpp  itemdb.cpp  itemdb.hpp  log.cpp  log.hpp  mail.cpp  mail.hpp  map.cpp  map.hpp  mapreg.cpp  (+37 more)
src/map/skills/: skill_factory.cpp  skill_factory.hpp  skill_impl.cpp  skill_impl.hpp  status_skill_impl.cpp  status_skill_impl.hpp  weapon_skill_impl.cpp  weapon_skill_impl.hpp
src/map/skills/acolyte/: angelus.cpp  angelus.hpp  blessing.cpp  blessing.hpp  crucis.cpp  crucis.hpp  cure.cpp  cure.hpp  decagi.cpp  decagi.hpp  heal.cpp  heal.hpp  holylight.cpp  holylight.hpp  holywater.cpp  holywater.hpp  incagi.cpp  incagi.hpp  ruwach.cpp  ruwach.hpp  skill_factory_acolyte.cpp
src/map/skills/archer/: arrowshower.cpp  arrowshower.hpp  chargearrow.cpp  chargearrow.hpp  concentration.cpp  concentration.hpp  doublestrafe.cpp  doublestrafe.hpp  makingarrow.cpp  makingarrow.hpp  skill_factory_archer.cpp
src/map/skills/custom/: skill_factory_custom.cpp
src/map/skills/mercenary/: mercenary_bash.cpp  mercenary_bash.hpp  skill_factory_mercenary.cpp
src/map/skills/merchant/: cartrevolution.cpp  cartrevolution.hpp  changecart.cpp  changecart.hpp  crazyuproar.cpp  crazyuproar.hpp  decoratecart.cpp  decoratecart.hpp  itemappraisal.cpp  itemappraisal.hpp  mammonite.cpp  mammonite.hpp  skill_factory_merchant.cpp  skill_vending.cpp  skill_vending.hpp
src/map/skills/swordman/: autoberserk.cpp  autoberserk.hpp  (+9 more)
src/tool/: CMakeLists.txt  mapcache.cpp  readme.md  yaml.hpp  yamlupgrade.cpp  yamlupgrade.hpp
src/web/: auth.cpp  charconfig_controller.cpp  emblem_controller.cpp  merchantstore_controller.cpp  partybooking_controller.cpp  userconfig_controller.cpp  web.cpp  web.hpp
test/: CMakeLists.txt
test/common/: CMakeLists.txt  utilities_test.cpp
tools/: CMakeLists.txt
tools/ci/: sql.bat  sql.sh
